--- a/index.html
+++ b/index.html
@@ -1,54 +1,59 @@
-<!doctype html>
+<!doctype HTML>
 <html>
 	<header>
 		<title>UTP</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="utpweekendstyle.css">
-
-	
-	
 	</header>
+	
 	<body>
 		<div id="top">
-			<h1>Welcome to My Homepage</h1>
-			<p>Use the menu to select different Stylesheets</p>
+			<h1>Welcome to my Homepage</h1>
+			<p>use the menu to select different Stylesheet</p>
 		</div>
-		<div class="wraper">
-			<div id="menubar">
-				<ul id="mylist">
-					<li>Stylesheet 1
-					</li>
-					<li>Stylesheet 2
-					</li>
-					<li>Stylesheet 3
-					</li>
-					<li>Stylesheet 4
-					</li>
-					<li>No Stylesheet
-					</li>
-				</ul>
-			</div>
-			<div id="main">
-				<h1>Same Page Different Stylesheets</h1>
-				<p>This is a demonstration of how different style sheets can change the layout of your HTML page. You can change the layout of this page by selecting different bla2 in the menu : <br/>
-				<a href="">Stylesheet1</a>,
-				<a href="">Stylesheet2</a>,
-				<a href="">Stylesheet3</a>,
-				<a href="">Stylesheet4</a>.
-				</p>
-				<h2>No style</h2>
-				<p>This page use DIV elements to group sections of HTML page. Click here to see how the page looks like with no stylesheet: <br/>
-				<a href="">No Stylesheet</a>
-				</p>
-			</div>
-			<div id="sidebar">
-				<h3>Sidebar</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
+		
+	<div id="wraper">
+		<div id="menubar">
+			<ul id="mylist">
+				<li>Stylesheet 1</li>
+				<li>Stylesheet 2</li>
+				<li>Stylesheet 3</li>
+				<li>Stylesheet 4</li>
+				<li>No Stylesheet</li>
+			</ul>
 		</div>
-		<div id="bottom">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+		
+		<div id="main">
+			<h1>Same page different Stylesheet</h1>
+			<p>This is a demostration of how different stylesheet can change the layout of your HTML. You can change
+			the layout of this page by selecting different stylesheet in the menu, or by selecting<br>one of the following links:<br>
+			<a href="">Stylesheet 1</a>, 
+			<a href="">Stylesheet 2</a>, 
+			<a href="">Stylesheet 3</a>, 
+			<a href="">Stylesheet 4</a>.
+			</p>
+			
+			<h3>No Style</h3>
+			<p>This page use DIV elements to group different section of the HTML page. Click here to see how the page looks like with no 
+			stylesheet:<br>
+			<a href="index.html">No stylesheet</a>.
+			</p>
 		</div>
-
-	</body>
+		
+		<div id="sidebar">
+			<h4>Side-bar</h4>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+		</div>
+	</div>
+		<div id="bottom">			
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+			when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+			It has survived not only five centuries, but also the leap into electronic typesetting, 
+			remaining essentially unchanged. It was popularised in the 1960s with the release of 
+			Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+			software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		</div>
+		
+	</body>	
 </html>
